# mlflow-demos

./: CLAUDE.md  README.md  env-template  pyproject.toml
agentbricks/fema-disaster/: .gitignore  README.md  app.py  app.yaml  databricks.yml  requirements.txt
agentbricks/fema-disaster/src/: 05_evaluate.py  create_agents.py  load_data.py  load_fema_data.py  query_supervisor.py  setup_agents.py  supervisor_client.py  teardown.py
ai_gateway_governance/: .gitignore  README.md  agent_simulator.py  ai_gateway_demo.ipynb  databricks.yml  env-template  gateway_config.py  observability.py  prompts.py  scenarios.py
devconnect/: README.md  __init__.py  caspers_kitchen_eval_demo_databricks.ipynb  config.py  mlflow_config.py  providers.py
devconnect/plans/: caspers-kitchen-multi-turn-bot-plan.md  web-search-multi-turn-bot-plan.md
devconnect/restaurant_research_bot/: __init__.py  prompts.py  restaurant_research_agent.py  restaurant_research_agent_cls.py  restaurant_research_agent_devconnect.ipynb  restaurant_research_agent_devconnect_databricks.ipynb  scenarios.py  search_tool.py
